chnge in button

--- a/SignUp page/index.html
+++ b/SignUp page/index.html
@@ -45,9 +45,10 @@
               <img src="Images/Password eye.png" alt="eye" class="eye" />
             </div>
           </div>
-          <button class="signup">
-            <p class="signupT">Sign Up</p>
-          </button>
+          <!-- <button class="signup"><a class="signupb" href="/Course Categories page/index.html">SignUp</a></button> -->
+           <a href="/Course Categories page/index.html" class="signupb">
+            <p class="signup">Sign Up</p>
+           </a>
         </form>
         <footer>
           <p class="footer">
